--- a/flights/templates/flights/admin/user_confirm_delete.html
+++ b/flights/templates/flights/admin/user_confirm_delete.html
@@ -1,6 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'admin/admin_base.html' %}
 {% load static %}
-{% block title %}Eliminar Usuario - Velaris{% endblock %}
 {% block content %}
 <div class="container-fluid">
     <div class="d-flex justify-content-between align-items-center mb-4">
