--- a/flights/templates/flights/admin/airport_confirm_delete.html
+++ b/flights/templates/flights/admin/airport_confirm_delete.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'admin/admin_base.html' %}
+{% load static %}
 {% block content %}
 <div class="container-fluid">
     <h1 class="mt-4">Eliminar Aeropuerto</h1>
