--- a/flights/templates/flights/admin/flight_form.html
+++ b/flights/templates/flights/admin/flight_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'admin/admin_base.html' %}
 {% load static %}
 {% block content %}
 <div class="container mt-4">
