--- a/flights/templates/flights/admin/user_detail.html
+++ b/flights/templates/flights/admin/user_detail.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'admin/admin_base.html' %}
+{% load static %}
 {% block content %}
 
 <div class="container-fluid">
@@ -102,7 +103,6 @@
                                     <th>Vuelo</th>
                                     <th>Fecha</th>
                                     <th>Estado</th>
-                                    <th>Pago</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -115,13 +115,6 @@
                                         <span class="badge bg-{% if booking.status == 'CONFIRMED' %}success{% elif booking.status == 'PENDING' %}warning{% else %}info{% endif %}">
                                             {{ booking.get_status_display }}
                                         </span>
-                                    </td>
-                                    <td>
-                                        {% if booking.payment and booking.payment.is_paid %}
-                                        <span class="badge bg-success">Pagado</span>
-                                        {% else %}
-                                        <span class="badge bg-danger">Pendiente</span>
-                                        {% endif %}
                                     </td>
                                 </tr>
                                 {% endfor %}
