--- a/flights/templates/flights/admin/user_edit.html
+++ b/flights/templates/flights/admin/user_edit.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'admin/admin_base.html' %}
+{% load static %}
 {% block content %}
 <div class="container-fluid">
     <div class="d-flex justify-content-between align-items-center mb-4">
