--- a/flights/templates/flights/admin/user_list.html
+++ b/flights/templates/flights/admin/user_list.html
@@ -1,6 +1,5 @@
-{%extends 'base.html'%}
+{% extends 'admin/admin_base.html' %}
 {% load static %}
-
 {% block content %}
 
 <div class="admin-container">
