--- a/accounts/templates/accounts/password_reset_complete.html
+++ b/accounts/templates/accounts/password_reset_complete.html
@@ -3,6 +3,9 @@
 {% load static %}
 {% block title %}Restablecimiento de Contraseña Completo - Velaris{% endblock %}
 {% block content %}
-<p>¡Tu contraseña ha sido restablecida con éxito!</p>
-<a href="{% url 'login' %}">Iniciar sesión</a>
+<div class="success-message">
+    <i class="fas fa-check-circle"></i>
+    <p>¡Tu contraseña ha sido restablecida con éxito!</p>
+    <a href="{% url 'login' %}" class="btn">Iniciar sesión</a>
+</div>
 {% endblock %}
