--- a/templates/base.html
+++ b/templates/base.html
@@ -17,14 +17,16 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-glass sticky-top py-2">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">Velaris</a>
+            <a class="navbar-brand fw-bold" href="{% url 'home' %}">
+                <i class="fa-solid fa-plane-departure me-2 text-primary"></i>Velaris
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-2">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'home' %}">Inicio</a>
                     </li>
@@ -39,14 +41,14 @@
                         <a class="nav-link" href="{% url 'logout' %}">Cerrar Sesión</a>
                     </li>
                     {% else %}
-                    <li class="btn btn-velaris ms-lg-3 mt-3 mt-lg-0">
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'login' %}" class="btn btn-velaris ms-lg-2 px-4 py-2 fw-semibold">Reservar Ahora</a>
                     </li>
                     {% endif %}
                 </ul>
-                {% if not user.is_authenticated %}
-                <a href="{% url 'login' %}" class="btn btn-velaris ms-lg-3 mt-3 mt-lg-0">Reservar Ahora</a>
-                {% endif %}
             </div>
         </div>
     </nav>
