--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 {% block title %}Inicio - Velaris{% endblock %}
+{% load humanize %}
+
 
 {% block content %}
 <!-- Hero Section -->
