--- a/templates/base.html
+++ b/templates/base.html
@@ -41,11 +41,9 @@
                         <a class="nav-link" href="{% url 'logout' %}">Cerrar Sesión</a>
                     </li>
                     {% else %}
+                    
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="{% url 'login' %}" class="btn btn-velaris ms-lg-2 px-4 py-2 fw-semibold">Reservar Ahora</a>
+                        <a href="{% url 'login' %}" class="btn btn-velaris ms-lg-2 px-4 py-2 fw-semibold">Iniciar Sesión</a>
                     </li>
                     {% endif %}
                 </ul>
